@@ -4,21 +4,20 @@ import jakarta.annotation.Nonnull;
 import jakarta.annotation.Nullable;
 
 import java.io.Serial;
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.function.Predicate;
 
 /**
- * An array-based implementation of a tuple.
+ * A fixed-size tuple which can only hold three elements.
+ * Triples use ABC notation to identity their elements.
  *
  * @param <E> The type of element this tuple should hold
- * @see Tuple
+ * @see TriTriple
  */
-public class ArrayTuple<E> implements Tuple<E> {
+public class Triple<E> implements Tuple<E> {
     //
     // Constants
     //
@@ -34,24 +33,44 @@ public class ArrayTuple<E> implements Tuple<E> {
     //
 
     /**
-     * Creates a new array tuple.
+     * Creates a new triple.
      *
-     * @param elements The elements this tuple should hold
+     * @param a The first element of this triple
+     * @param b The second element of this triple
+     * @param c The third element of this triple
      */
-    @SafeVarargs
-    @SuppressWarnings("unchecked")
-    public ArrayTuple(@Nonnull E... elements) {
-        this.elements = (E[]) Arrays.stream(elements).toArray();
+    public Triple(E a, E b, E c) {
+        this.a = a;
+        this.b = b;
+        this.c = c;
     }
 
     /**
-     * Creates a new array tuple.
+     * Creates a new triple.
+     *
+     * @param elements An array containing the elements of this triple in ABC order
+     * @throws IllegalArgumentException When the array's length is not {@code 3}
+     */
+    public Triple(@Nonnull E[] elements) {
+        if (elements.length != 3) {
+            throw new IllegalArgumentException("The provided array's length is not 3.");
+        }
+
+        this.a = elements[0];
+        this.b = elements[1];
+        this.c = elements[2];
+    }
+
+    /**
+     * Creates a new triple.
      *
      * @param t The tuple of which to copy elements from
+     * @throws IllegalArgumentException When the tuple's size is not {@code 3}
      */
-    @SuppressWarnings("unchecked")
-    protected ArrayTuple(@Nonnull ArrayTuple<? extends E> t) {
-        this.elements = (E[]) Arrays.stream(t.elements).toArray();
+    public Triple(@Nonnull Triple<? extends E> t) {
+        this.a = t.a;
+        this.b = t.b;
+        this.c = t.c;
     }
 
     //
@@ -59,11 +78,19 @@ public class ArrayTuple<E> implements Tuple<E> {
     //
 
     /**
-     * The array of elements this tuple is holding.
-     * It is important that this array stays private in order to ensure that
-     * this class is immutable.
+     * The first element of this tuple.
      */
-    private final E[] elements;
+    protected final E a;
+
+    /**
+     * The second element of this tuple.
+     */
+    protected final E b;
+
+    /**
+     * The third element of this tuple.
+     */
+    protected final E c;
 
     //
     // Properties
@@ -76,7 +103,7 @@ public class ArrayTuple<E> implements Tuple<E> {
      */
     @Override
     public int size() {
-        return elements.length;
+        return 3;
     }
 
     //
@@ -92,7 +119,39 @@ public class ArrayTuple<E> implements Tuple<E> {
      */
     @Override
     public E get(int i) throws IndexOutOfBoundsException {
-        return elements[i];
+        return switch (i) {
+            case 0 -> a;
+            case 1 -> b;
+            case 2 -> c;
+            default -> throw new IndexOutOfBoundsException("Index " + i + " is out of bounds for size 3.");
+        };
+    }
+
+    /**
+     * Returns the A component (the first component) of this triple.
+     *
+     * @return The A component of this triple
+     */
+    public E a() {
+        return a;
+    }
+
+    /**
+     * Returns the B component (the second component) of this triple.
+     *
+     * @return The B component of this triple
+     */
+    public E b() {
+        return b;
+    }
+
+    /**
+     * Returns the C component (the third component) of this triple.
+     *
+     * @return The C component of this triple
+     */
+    public E c() {
+        return c;
     }
 
     //
@@ -107,11 +166,7 @@ public class ArrayTuple<E> implements Tuple<E> {
      */
     @Override
     public boolean contains(@Nullable Object obj) {
-        for (final E element : elements) {
-            if (Objects.equals(element, obj)) return true;
-        }
-
-        return false;
+        return Objects.equals(a, obj) || Objects.equals(b, obj) || Objects.equals(c, obj);
     }
 
     /**
@@ -130,24 +185,6 @@ public class ArrayTuple<E> implements Tuple<E> {
     }
 
     //
-    // Filtration
-    //
-
-    /**
-     * {@inheritDoc}
-     *
-     * @param f The filter function to handle the filtration of this tuple
-     * @return {@inheritDoc}
-     */
-    @Nonnull
-    @Override
-    @SuppressWarnings("unchecked")
-    public Tuple<E> filter(@Nonnull Predicate<? super E> f) {
-        return new ArrayTuple<>((E[]) Arrays.stream(elements).filter(f).toArray());
-    }
-
-
-    //
     // Transformation
     //
 
@@ -160,9 +197,8 @@ public class ArrayTuple<E> implements Tuple<E> {
      */
     @Nonnull
     @Override
-    @SuppressWarnings("unchecked")
     public <F> Tuple<F> map(@Nonnull Function<? super E, ? extends F> f) {
-        return new ArrayTuple<>((F[]) Arrays.stream(elements).map(f).toArray());
+        return new Triple<>(f.apply(a), f.apply(b), f.apply(c));
     }
 
     /**
@@ -177,20 +213,13 @@ public class ArrayTuple<E> implements Tuple<E> {
      */
     @Nonnull
     @Override
-    @SuppressWarnings("unchecked")
     public <F, G> Tuple<G> merge(@Nonnull Tuple<F> t, @Nonnull BiFunction<? super E, ? super F, G> f)
             throws IllegalArgumentException {
-        if (elements.length != t.size()) {
+        if (t.size() != 3) {
             throw new IllegalArgumentException("Tuple sizes must match for this operation.");
         }
 
-        final G[] result = (G[]) new Object[elements.length];
-
-        for (int i = 0; i < elements.length; i++) {
-            result[i] = f.apply(elements[i], t.get(i));
-        }
-
-        return new ArrayTuple<>(result);
+        return new Triple<>(f.apply(a, t.get(0)), f.apply(b, t.get(1)), f.apply(c, t.get(2)));
     }
 
     //
@@ -204,7 +233,7 @@ public class ArrayTuple<E> implements Tuple<E> {
      */
     @Override
     public Iterator<E> iterator() {
-        return Arrays.stream(elements).iterator();
+        return List.of(a, b, c).iterator();
     }
 
     //
@@ -219,7 +248,7 @@ public class ArrayTuple<E> implements Tuple<E> {
     @Nonnull
     @Override
     public SafeArray<E> array() {
-        return SafeArray.of(elements);
+        return SafeArray.of(a, b, c);
     }
 
     /**
@@ -230,7 +259,7 @@ public class ArrayTuple<E> implements Tuple<E> {
     @Nonnull
     @Override
     public List<E> list() {
-        return Arrays.asList(elements);
+        return List.of(a, b, c);
     }
 
     //
@@ -246,13 +275,7 @@ public class ArrayTuple<E> implements Tuple<E> {
     @Override
     public boolean equals(@Nullable Object obj) {
         if (!(obj instanceof Tuple<?> t)) return false;
-        if (elements.length != t.size()) return false;
-
-        for (int i = 0; i < elements.length; i++) {
-            if (!Objects.equals(elements[i], t.get(i))) return false;
-        }
-
-        return true;
+        return array().equals(t.array());
     }
 
     //
@@ -267,6 +290,6 @@ public class ArrayTuple<E> implements Tuple<E> {
     @Override
     @Nonnull
     public String toString() {
-        return Arrays.toString(elements);
+        return "[" + a + ", " + b + ", " + c + "]";
     }
 }
